# PyNVTT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  compression_options.py  context.py  main.py  nvtt.py  output_options.py  pyproject.toml  surface.py
.github/workflows/: publish.yml
enums/: Format.py  PixelType.py  Quality.py
nvtt_enums/: AlphaMode.py  EncodeFlags.py  Format.py  RoundMode.py  ToneMapper.py  __init__.py
src/nvtt/: compression.py  context.py  core.py  easy_dds.py  image_helper.py  output.py  surface.py
src/nvtt/enums/: __init__.py  alpha_mode.py  channel.py  container.py  encode_flags.py  error.py  filters.py  format.py  mipmap_filter.py  normal_transform.py  pixel_type.py  quality.py  round_mode.py  severity.py  texture_type.py  tone_mapper.py  wrap_mode.py
src/nvtt/utils/: easy_dds.py
